<resources>
    <string name="facebook_application_id" translatable="false">227091151168633</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb227091151168633</string>
    <string name="ga_trackingId" translatable="false">UA-113067263-1</string>
    <string name="api_map_key" translatable="false">AIzaSyAFrBb3RPLb8Vlz4-dERUR2atZaiPj4yoM</string>
    <string name="FCM_KEY" translatable="false">AAAATegXd4w:APA91bE_RRy4w4s8aDSJHIeiJPn8xDoKzlSDyTBespBNSSPRMF2iX-VdHkvbdkLSXkyA07NBphPp2MIv1Al2Bhf_I4s_XSvsScVdgiQt4RRDZpyQGN7c-ITrQP7t9UAgmdTGfSQllx5F</string>
    <string name="invitation_deep_link" translatable="false">https://vn98y.app.goo.gl/bjYi</string>
    <string name="invitation_custom_image" translatable="false">https://ibb.co/cYAajw</string>
    <string name="yt_link_explainer" translatable="false">https://youtu.be/FOkt6F0ZAOk</string>
    <string name="yt_link_fleetprovider" translatable="false">https://youtu.be/45hvO9XOFro</string>
    <string name="yt_link_loadproviders" translatable="false">https://youtu.be/CLzu7nFdv3Y</string>
    <string name="invitation_title">Grow your Logistic Network by INL</string>
    <string name="invitation_message">Be the part of India level logistic network and  grow your transport/logistic business as well as network just download INL Now</string>
    <string name="msg_permission_required">You denied the required permission, You Disabled the function. Grant the permission to use this function !</string>
    <string name="app_name">Indian Logistic Network</string>
    <string name="invitation_cta">Download Now</string>
    <string name="from">From</string>
    <string name="select_city">. Select City</string>
    <string name="to">To</string>
    <string name="userInactive">User Inactive, will be invited via SMS.</string>
    <string name="available">Available</string>
    <string name="about_iln">About ILN</string>
    <string name="iln_is_a_platform">ILN is a platform for fleet providers and load providers to connect with each other for business in a profound way. Load providers can use directory feature to get a list of top available transport companies, or can post the requirement on loadboard and get responses when a transporter is interested. Fleet Providers can register there company and become visible to all on directory. Transport companies can then collect ratings and connections to improve credibility and get more leads. A company can also use promote feature to stay top on the result list for a particular route.</string>
    <string name="iln_explainer_video">ILN explainer video</string>
    <string name="video_tutorial_for_load_providers">Video Tutorial for Load providers</string>
    <string name="video_tutorial_for_fleet_providers">Video Tutorial for Fleet providers</string>
    <string name="stay_in_touch_with_us_on">Stay in touch with us on</string>
    <string name="youtube_iln_community_official">youtube/ILN Community Official</string>
    <string name="facebook_ilnofficial">facebook/ILNOfficial</string>
    <string name="instagram_indian_logistics_network">instagram/ilnofficial</string>
    <string name="chat_with_iln_assistant">Chat with ILN Assistant</string>
    <string name="no_chats_yet">No Chats Yet!</string>
    <string name="chat_initiating_message">Chat Initiating Message :</string>
    <string name="typing">Typing…</string>
    <string name="type_something">Type Something…</string>
    <string name="this_profile_is_blocked">This profile is blocked!</string>
    <string name="tap_here_to_request_unblock">Tap here to request unblock.</string>
    <string name="fetching">Fetching…</string>
    <string name="see_insights">SEE INSIGHTS</string>
    <string name="promote">Promote</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cities">Cities</string>
    <string name="connections">Connections</string>
    <string name="ratings">Ratings</string>
    <string name="role_unspecified_yet">ROLE UNSPECIFIED YET!</string>
    <string name="ratings_and_reviews_0">Ratings and Reviews (0)</string>
    <string name="report_this_profile">REPORT THIS PROFILE!</string>
    <string name="edit_company_profile">Edit Company Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="company_bio">Company Bio</string>
    <string name="unspecified_yet">UNSPECIFIED YET!</string>
    <string name="edit_role">Edit Role</string>
    <string name="company_address">Company Address</string>
    <string name="your_city">Your City</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="pin_point_on_map">Pin Point on Map</string>
    <string name="tap_to_point">Tap to point</string>
    <string name="available_fleets">Available Fleets</string>
    <string name="manage_cities">Manage Cities</string>
    <string name="log_in_with_facebook_mobile">LOG IN WITH FACEBOOK + MOBILE</string>
    <string name="log_in_with_phone_number">LOG IN WITH PHONE NUMBER</string>
    <string name="note">Note</string>
    <string name="back_to_old_app">Back to Old App</string>
    <string name="facebook_login_note">Facebook Login is just to Authenticate you on ILN. We do not use any of your data or post on your Facebook account without permission.</string>
    <string name="no_filters_are_applied">No filters are applied.</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="manage_your_loadposts">Manage Your LoadPosts</string>
    <string name="not_interested">Not Interested</string>
    <string name="try_it">Try It!</string>
    <string name="allow_and_sync_contacts">Allow and sync contacts</string>
    <string name="dear_iln_user">Dear ILN user!</string>
    <string name="premission_contacts">We need your permission to access contacts from your Phonebook. Then, you can send them invitation by SMS for free.</string>
    <string name="dont_ask_this_again">Dont ask this again.</string>
    <string name="select_body_type">Select Body Type</string>
    <string name="truck_length">Truck Length</string>
    <string name="insights">Insights</string>
    <string name="visits_on_this_profile">Visits on this profile.</string>
    <string name="calls_on_this_business">Calls on this business.</string>
    <string name="chats_with_this_user">Chats with this user.</string>
    <string name="connections_gained">Connections gained.</string>
    <string name="ratings_gained">Ratings gained.</string>
    <string name="manage_operation_cities">Manage Operation Cities</string>
    <string name="cities_empty_add_now">Cities Empty. Add Now!</string>
    <string name="it_is_recommended_city">It is recommended to keep only top 20 cities you are currently operating in this list.</string>
    <string name="network_empty">Network Empty! You can add companies to your network by visiting company profiles from directory search and tapping on \'Connect\' button.</string>
    <string name="find_transporters_on_iln_directory">Find Transporters on</string>
    <string name="directory_guide">Select your route/fleet and get the list of available transporters.</string>
    <string name="transporters_online_now">Transporters Online now.</string>
    <string name="recent_searches">Recent searches :</string>
    <string name="goto_directory">Goto Directory</string>
    <string name="post_your_load_on_iln_loadboard">Post your load on ILN Loadboard</string>
    <string name="loadboard_guide">Select your route/fleet and get the list of available transporters.</string>
    <string name="search_loads">Search Loads</string>
    <string name="search_a_transport_company_by_name">Search a transport company by name</string>
    <string name="searchbyname_guide">Select your route/fleet and get the list of available transporters.</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="note_loadpost_form">Note: This form is for load providers and not for asking load requirement.</string>
    <string name="indian_logistics_network">Indian Logistics Network</string>
    <string name="selected_companies">Selected Companies</string>
    <string name="a_complete_profile_request">A complete profile will improve your chances of getting business through ILN</string>
    <string name="create_your_company_profile">Create Your Company Profile</string>
    <string name="i_am_a_load_provider">I am a Load Provider</string>
    <string name="i_am_a_fleet_provider">I am a Fleet Provider</string>
    <string name="specify_your_role">Specify your Role.</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="no_result_found_try_something_else">No result found! try something else.</string>
    <string name="search_a_company_bio">Type a transport company name or company operator/owner name or Registered Mobile Number to get search results.</string>
    <string name="scan_company_qr">Scan Company QR</string>
    <string name="search">Search....</string>
    <string name="iln_settings">ILN Settings</string>
    <string name="get_loadboard_notifications">Get Loadboard Notifications</string>
    <string name="report_this_company">Report This Company</string>
    <string name="feels_like_a_spam">Feels Like a spam</string>
    <string name="inappropriate_response_on_call">Inappropriate response on call</string>
    <string name="inappropriate_response_on_chat">Inappropriate response on chat</string>
    <string name="its_a_fraud">Its a fraud!</string>
    <string name="write_a_comment_optional">Write a comment (optional)</string>
    <string name="submit_report">SUBMIT REPORT</string>
    <string name="you">You</string>
    <string name="my_business">My Business</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="settings">Settings</string>
    <string name="lets_make_iln">\'Lets make ILN the best and free platform for transport community. Share the app with your connections.\'</string>
    <string name="share_app">SHARE APP</string>
    <string name="invite_phonebook_contacts">INVITE PHONEBOOK CONTACTS</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="logout">LogOut</string>
    <string name="work_in_progress">WORK IN PROGRESS</string>
    <string name="no_results_found_try_nearby_route">No Results Found, Try Nearby Route</string>
    <string name="post_to_selected">POST TO SELECTED</string>
    <string name="post_to_loadboard">POST TO LOADBOARD</string>
    <string name="invite">INVITE</string>
    <string name="found_on_iln">Found on ILN</string>
    <string name="post_now">POST NOW</string>
    <string name="type_other_requirement_here">Type Other Requirement here…</string>
    <string name="other_requirement_comment_here">Other Requirement/Comment Here</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="remove">Remove</string>
    <string name="chat_2">CHAT</string>
    <string name="call_2">CALL</string>
    <string name="directory">Directory</string>
    <string name="loadboard_filters">Loadboard Filters</string>
    <string name="loadboard">Loadboard</string>
    <string name="new_load">New Load</string>
    <string name="your_loads">Your Loads</string>
    <string name="offer_string">Get up to 90% discount on Vehicle Insurance, now!</string>
    <string name="vehicle_type">VEHICLE TYPE</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="body_type">BODY TYPE</string>
    <string name="payload">PAYLOAD</string>
    <string name="payload_2">Payload</string>
    <string name="length">LENGTH</string>
    <string name="loading">Loading…</string>
    <string name="english">English (Default)</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="invite_phonebook_contacts1">Invite Phonebook Contacts</string>
    <string name="skip_now">Skip Now</string>
</resources>